grammar/src/qasm3Parser.ts
// Generated from qasm3Parser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import qasm3ParserListener from "./qasm3ParserListener.js";
import qasm3ParserVisitor from "./qasm3ParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class qasm3Parser extends Parser {
	public static readonly OPENQASM = 1;
	public static readonly INCLUDE = 2;
	public static readonly DEFCALGRAMMAR = 3;
	public static readonly DEF = 4;
	public static readonly CAL = 5;
	public static readonly DEFCAL = 6;
	public static readonly GATE = 7;
	public static readonly EXTERN = 8;
	public static readonly BOX = 9;
	public static readonly LET = 10;
	public static readonly BREAK = 11;
	public static readonly CONTINUE = 12;
	public static readonly IF = 13;
	public static readonly ELSE = 14;
	public static readonly END = 15;
	public static readonly RETURN = 16;
	public static readonly FOR = 17;
	public static readonly WHILE = 18;
	public static readonly IN = 19;
	public static readonly PRAGMA = 20;
	public static readonly AnnotationKeyword = 21;
	public static readonly INPUT = 22;
	public static readonly OUTPUT = 23;
	public static readonly CONST = 24;
	public static readonly READONLY = 25;
	public static readonly MUTABLE = 26;
	public static readonly QREG = 27;
	public static readonly QUBIT = 28;
	public static readonly CREG = 29;
	public static readonly BOOL = 30;
	public static readonly BIT = 31;
	public static readonly INT = 32;
	public static readonly UINT = 33;
	public static readonly FLOAT = 34;
	public static readonly ANGLE = 35;
	public static readonly COMPLEX = 36;
	public static readonly ARRAY = 37;
	public static readonly VOID = 38;
	public static readonly DURATION = 39;
	public static readonly STRETCH = 40;
	public static readonly GPHASE = 41;
	public static readonly INV = 42;
	public static readonly POW = 43;
	public static readonly CTRL = 44;
	public static readonly NEGCTRL = 45;
	public static readonly DIM = 46;
	public static readonly DURATIONOF = 47;
	public static readonly DELAY = 48;
	public static readonly RESET = 49;
	public static readonly MEASURE = 50;
	public static readonly BARRIER = 51;
	public static readonly BooleanLiteral = 52;
	public static readonly LBRACKET = 53;
	public static readonly RBRACKET = 54;
	public static readonly LBRACE = 55;
	public static readonly RBRACE = 56;
	public static readonly LPAREN = 57;
	public static readonly RPAREN = 58;
	public static readonly COLON = 59;
	public static readonly SEMICOLON = 60;
	public static readonly DOT = 61;
	public static readonly COMMA = 62;
	public static readonly EQUALS = 63;
	public static readonly ARROW = 64;
	public static readonly PLUS = 65;
	public static readonly DOUBLE_PLUS = 66;
	public static readonly MINUS = 67;
	public static readonly ASTERISK = 68;
	public static readonly DOUBLE_ASTERISK = 69;
	public static readonly SLASH = 70;
	public static readonly PERCENT = 71;
	public static readonly PIPE = 72;
	public static readonly DOUBLE_PIPE = 73;
	public static readonly AMPERSAND = 74;
	public static readonly DOUBLE_AMPERSAND = 75;
	public static readonly CARET = 76;
	public static readonly AT = 77;
	public static readonly TILDE = 78;
	public static readonly EXCLAMATION_POINT = 79;
	public static readonly EqualityOperator = 80;
	public static readonly CompoundAssignmentOperator = 81;
	public static readonly ComparisonOperator = 82;
	public static readonly BitshiftOperator = 83;
	public static readonly IMAG = 84;
	public static readonly ImaginaryLiteral = 85;
	public static readonly BinaryIntegerLiteral = 86;
	public static readonly OctalIntegerLiteral = 87;
	public static readonly DecimalIntegerLiteral = 88;
	public static readonly HexIntegerLiteral = 89;
	public static readonly Identifier = 90;
	public static readonly HardwareQubit = 91;
	public static readonly FloatLiteral = 92;
	public static readonly TimingLiteral = 93;
	public static readonly BitstringLiteral = 94;
	public static readonly Whitespace = 95;
	public static readonly Newline = 96;
	public static readonly LineComment = 97;
	public static readonly BlockComment = 98;
	public static readonly VERSION_IDENTIFER_WHITESPACE = 99;
	public static readonly VersionSpecifier = 100;
	public static readonly ARBITRARY_STRING_WHITESPACE = 101;
	public static readonly StringLiteral = 102;
	public static readonly EAT_INITIAL_SPACE = 103;
	public static readonly EAT_LINE_END = 104;
	public static readonly RemainingLineContent = 105;
	public static readonly CAL_PRELUDE_WHITESPACE = 106;
	public static readonly CAL_PRELUDE_COMMENT = 107;
	public static readonly DEFCAL_PRELUDE_WHITESPACE = 108;
	public static readonly DEFCAL_PRELUDE_COMMENT = 109;
	public static readonly CalibrationBlock = 110;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_version = 1;
	public static readonly RULE_statement = 2;
	public static readonly RULE_annotation = 3;
	public static readonly RULE_scope = 4;
	public static readonly RULE_pragma = 5;
	public static readonly RULE_statementOrScope = 6;
	public static readonly RULE_calibrationGrammarStatement = 7;
	public static readonly RULE_includeStatement = 8;
	public static readonly RULE_breakStatement = 9;
	public static readonly RULE_continueStatement = 10;
	public static readonly RULE_endStatement = 11;
	public static readonly RULE_forStatement = 12;
	public static readonly RULE_ifStatement = 13;
	public static readonly RULE_returnStatement = 14;
	public static readonly RULE_whileStatement = 15;
	public static readonly RULE_barrierStatement = 16;
	public static readonly RULE_boxStatement = 17;
	public static readonly RULE_delayStatement = 18;
	public static readonly RULE_gateCallStatement = 19;
	public static readonly RULE_measureArrowAssignmentStatement = 20;
	public static readonly RULE_resetStatement = 21;
	public static readonly RULE_aliasDeclarationStatement = 22;
	public static readonly RULE_classicalDeclarationStatement = 23;
	public static readonly RULE_constDeclarationStatement = 24;
	public static readonly RULE_ioDeclarationStatement = 25;
	public static readonly RULE_oldStyleDeclarationStatement = 26;
	public static readonly RULE_quantumDeclarationStatement = 27;
	public static readonly RULE_defStatement = 28;
	public static readonly RULE_externStatement = 29;
	public static readonly RULE_gateStatement = 30;
	public static readonly RULE_assignmentStatement = 31;
	public static readonly RULE_expressionStatement = 32;
	public static readonly RULE_calStatement = 33;
	public static readonly RULE_defcalStatement = 34;
	public static readonly RULE_expression = 35;
	public static readonly RULE_aliasExpression = 36;
	public static readonly RULE_declarationExpression = 37;
	public static readonly RULE_measureExpression = 38;
	public static readonly RULE_rangeExpression = 39;
	public static readonly RULE_setExpression = 40;
	public static readonly RULE_arrayLiteral = 41;
	public static readonly RULE_indexOperator = 42;
	public static readonly RULE_indexedIdentifier = 43;
	public static readonly RULE_returnSignature = 44;
	public static readonly RULE_gateModifier = 45;
	public static readonly RULE_scalarType = 46;
	public static readonly RULE_qubitType = 47;
	public static readonly RULE_arrayType = 48;
	public static readonly RULE_arrayReferenceType = 49;
	public static readonly RULE_designator = 50;
	public static readonly RULE_defcalTarget = 51;
	public static readonly RULE_defcalArgumentDefinition = 52;
	public static readonly RULE_defcalOperand = 53;
	public static readonly RULE_gateOperand = 54;
	public static readonly RULE_externArgument = 55;
	public static readonly RULE_argumentDefinition = 56;
	public static readonly RULE_argumentDefinitionList = 57;
	public static readonly RULE_defcalArgumentDefinitionList = 58;
	public static readonly RULE_defcalOperandList = 59;
	public static readonly RULE_expressionList = 60;
	public static readonly RULE_identifierList = 61;
	public static readonly RULE_gateOperandList = 62;
	public static readonly RULE_externArgumentList = 63;
	public static readonly literalNames: (string | null)[] = [ null, "'OPENQASM'", 
                                                            "'include'", 
                                                            "'defcalgrammar'", 
                                                            "'def'", "'cal'", 
                                                            "'defcal'", 
                                                            "'gate'", "'extern'", 
                                                            "'box'", "'let'", 
                                                            "'break'", "'continue'", 
                                                            "'if'", "'else'", 
                                                            "'end'", "'return'", 
                                                            "'for'", "'while'", 
                                                            "'in'", null, 
                                                            null, "'input'", 
                                                            "'output'", 
                                                            "'const'", "'readonly'", 
                                                            "'mutable'", 
                                                            "'qreg'", "'qubit'", 
                                                            "'creg'", "'bool'", 
                                                            "'bit'", "'int'", 
                                                            "'uint'", "'float'", 
                                                            "'angle'", "'complex'", 
                                                            "'array'", "'void'", 
                                                            "'duration'", 
                                                            "'stretch'", 
                                                            "'gphase'", 
                                                            "'inv'", "'pow'", 
                                                            "'ctrl'", "'negctrl'", 
                                                            "'#dim'", "'durationof'", 
                                                            "'delay'", "'reset'", 
                                                            "'measure'", 
                                                            "'barrier'", 
                                                            null, "'['", 
                                                            "']'", "'{'", 
                                                            "'}'", "'('", 
                                                            "')'", "':'", 
                                                            "';'", "'.'", 
                                                            "','", "'='", 
                                                            "'->'", "'+'", 
                                                            "'++'", "'-'", 
                                                            "'*'", "'**'", 
                                                            "'/'", "'%'", 
                                                            "'|'", "'||'", 
                                                            "'&'", "'&&'", 
                                                            "'^'", "'@'", 
                                                            "'~'", "'!'", 
                                                            null, null, 
                                                            null, null, 
                                                            "'im'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "OPENQASM", 
                                                             "INCLUDE", 
                                                             "DEFCALGRAMMAR", 
                                                             "DEF", "CAL", 
                                                             "DEFCAL", "GATE", 
                                                             "EXTERN", "BOX", 
                                                             "LET", "BREAK", 
                                                             "CONTINUE", 
                                                             "IF", "ELSE", 
                                                             "END", "RETURN", 
                                                             "FOR", "WHILE", 
                                                             "IN", "PRAGMA", 
                                                             "AnnotationKeyword", 
                                                             "INPUT", "OUTPUT", 
                                                             "CONST", "READONLY", 
                                                             "MUTABLE", 
                                                             "QREG", "QUBIT", 
                                                             "CREG", "BOOL", 
                                                             "BIT", "INT", 
                                                             "UINT", "FLOAT", 
                                                             "ANGLE", "COMPLEX", 
                                                             "ARRAY", "VOID", 
                                                             "DURATION", 
                                                             "STRETCH", 
                                                             "GPHASE", "INV", 
                                                             "POW", "CTRL", 
                                                             "NEGCTRL", 
                                                             "DIM", "DURATIONOF", 
                                                             "DELAY", "RESET", 
                                                             "MEASURE", 
                                                             "BARRIER", 
                                                             "BooleanLiteral", 
                                                             "LBRACKET", 
                                                             "RBRACKET", 
                                                             "LBRACE", "RBRACE", 
                                                             "LPAREN", "RPAREN", 
                                                             "COLON", "SEMICOLON", 
                                                             "DOT", "COMMA", 
                                                             "EQUALS", "ARROW", 
                                                             "PLUS", "DOUBLE_PLUS", 
                                                             "MINUS", "ASTERISK", 
                                                             "DOUBLE_ASTERISK", 
                                                             "SLASH", "PERCENT", 
                                                             "PIPE", "DOUBLE_PIPE", 
                                                             "AMPERSAND", 
                                                             "DOUBLE_AMPERSAND", 
                                                             "CARET", "AT", 
                                                             "TILDE", "EXCLAMATION_POINT", 
                                                             "EqualityOperator", 
                                                             "CompoundAssignmentOperator", 
                                                             "ComparisonOperator", 
                                                             "BitshiftOperator", 
                                                             "IMAG", "ImaginaryLiteral", 
                                                             "BinaryIntegerLiteral", 
                                                             "OctalIntegerLiteral", 
                                                             "DecimalIntegerLiteral", 
                                                             "HexIntegerLiteral", 
                                                             "Identifier", 
                                                             "HardwareQubit", 
                                                             "FloatLiteral", 
                                                             "TimingLiteral", 
                                                             "BitstringLiteral", 
                                                             "Whitespace", 
                                                             "Newline", 
                                                             "LineComment", 
                                                             "BlockComment", 
                                                             "VERSION_IDENTIFER_WHITESPACE", 
                                                             "VersionSpecifier", 
                                                             "ARBITRARY_STRING_WHITESPACE", 
                                                             "StringLiteral", 
                                                             "EAT_INITIAL_SPACE", 
                                                             "EAT_LINE_END", 
                                                             "RemainingLineContent", 
                                                             "CAL_PRELUDE_WHITESPACE", 
                                                             "CAL_PRELUDE_COMMENT", 
                                                             "DEFCAL_PRELUDE_WHITESPACE", 
                                                             "DEFCAL_PRELUDE_COMMENT", 
                                                             "CalibrationBlock" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "version", "statement", "annotation", "scope", "pragma", "statementOrScope", 
		"calibrationGrammarStatement", "includeStatement", "breakStatement", "continueStatement", 
		"endStatement", "forStatement", "ifStatement", "returnStatement", "whileStatement", 
		"barrierStatement", "boxStatement", "delayStatement", "gateCallStatement", 
		"measureArrowAssignmentStatement", "resetStatement", "aliasDeclarationStatement", 
		"classicalDeclarationStatement", "constDeclarationStatement", "ioDeclarationStatement", 
		"oldStyleDeclarationStatement", "quantumDeclarationStatement", "defStatement", 
		"externStatement", "gateStatement", "assignmentStatement", "expressionStatement", 
		"calStatement", "defcalStatement", "expression", "aliasExpression", "declarationExpression", 
		"measureExpression", "rangeExpression", "setExpression", "arrayLiteral", 
		"indexOperator", "indexedIdentifier", "returnSignature", "gateModifier", 
		"scalarType", "qubitType", "arrayType", "arrayReferenceType", "designator", 
		"defcalTarget", "defcalArgumentDefinition", "defcalOperand", "gateOperand", 
		"externArgument", "argumentDefinition", "argumentDefinitionList", "defcalArgumentDefinitionList", 
		"defcalOperandList", "expressionList", "identifierList", "gateOperandList", 
		"externArgumentList",
	];
	public get grammarFileName(): string { return "qasm3Parser.g4"; }
	public get literalNames(): (string | null)[] { return qasm3Parser.literalNames; }
	public get symbolicNames(): (string | null)[] { return qasm3Parser.symbolicNames; }
	public get ruleNames(): string[] { return qasm3Parser.ruleNames; }
	public get serializedATN(): number[] { return qasm3Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, qasm3Parser._ATN, qasm3Parser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, qasm3Parser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 128;
				this.version();
				}
			}

			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4193763324) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 35635135) !== 0) || ((((_la - 67)) & ~0x1F) === 0 && ((1 << (_la - 67)) & 268179457) !== 0)) {
				{
				{
				this.state = 131;
				this.statement();
				}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 137;
			this.match(qasm3Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public version(): VersionContext {
		let localctx: VersionContext = new VersionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, qasm3Parser.RULE_version);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 139;
			this.match(qasm3Parser.OPENQASM);
			this.state = 140;
			this.match(qasm3Parser.VersionSpecifier);
			this.state = 141;
			this.match(qasm3Parser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, qasm3Parser.RULE_statement);
		let _la: number;
		try {
			this.state = 180;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 20:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 143;
				this.pragma();
				}
				break;
			case 2:
			case 3:
			case 4:
			case 5:
			case 6:
			case 7:
			case 8:
			case 9:
			case 10:
			case 11:
			case 12:
			case 13:
			case 15:
			case 16:
			case 17:
			case 18:
			case 21:
			case 22:
			case 23:
			case 24:
			case 27:
			case 28:
			case 29:
			case 30:
			case 31:
			case 32:
			case 33:
			case 34:
			case 35:
			case 36:
			case 37:
			case 39:
			case 40:
			case 41:
			case 42:
			case 43:
			case 44:
			case 45:
			case 47:
			case 48:
			case 49:
			case 50:
			case 51:
			case 52:
			case 57:
			case 67:
			case 78:
			case 79:
			case 85:
			case 86:
			case 87:
			case 88:
			case 89:
			case 90:
			case 91:
			case 92:
			case 93:
			case 94:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 147;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===21) {
					{
					{
					this.state = 144;
					this.annotation();
					}
					}
					this.state = 149;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 178;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
				case 1:
					{
					this.state = 150;
					this.aliasDeclarationStatement();
					}
					break;
				case 2:
					{
					this.state = 151;
					this.assignmentStatement();
					}
					break;
				case 3:
					{
					this.state = 152;
					this.barrierStatement();
					}
					break;
				case 4:
					{
					this.state = 153;
					this.boxStatement();
					}
					break;
				case 5:
					{
					this.state = 154;
					this.breakStatement();
					}
					break;
				case 6:
					{
					this.state = 155;
					this.calStatement();
					}
					break;
				case 7:
					{
					this.state = 156;
					this.calibrationGrammarStatement();
					}
					break;
				case 8:
					{
					this.state = 157;
					this.classicalDeclarationStatement();
					}
					break;
				case 9:
					{
					this.state = 158;
					this.constDeclarationStatement();
					}
					break;
				case 10:
					{
					this.state = 159;
					this.continueStatement();
					}
					break;
				case 11:
					{
					this.state = 160;
					this.defStatement();
					}
					break;
				case 12:
					{
					this.state = 161;
					this.defcalStatement();
					}
					break;
				case 13:
					{
					this.state = 162;
					this.delayStatement();
					}
					break;
				case 14:
					{
					this.state = 163;
					this.endStatement();
					}
					break;
				case 15:
					{
					this.state = 164;
					this.expressionStatement();
					}
					break;
				case 16:
					{
					this.state = 165;
					this.externStatement();
					}
					break;
				case 17:
					{
					this.state = 166;
					this.forStatement();
					}
					break;
				case 18:
					{
					this.state = 167;
					this.gateCallStatement();
					}
					break;
				case 19:
					{
					this.state = 168;
					this.gateStatement();
					}
					break;
				case 20:
					{
					this.state = 169;
					this.ifStatement();
					}
					break;
				case 21:
					{
					this.state = 170;
					this.includeStatement();
					}
					break;
				case 22:
					{
					this.state = 171;
					this.ioDeclarationStatement();
					}
					break;
				case 23:
					{
					this.state = 172;
					this.measureArrowAssignmentStatement();
					}
					break;
				case 24:
					{
					this.state = 173;
					this.oldStyleDeclarationStatement();
					}
					break;
				case 25:
					{
					this.state = 174;
					this.quantumDeclarationStatement();
					}
					break;
				case 26:
					{
					this.state = 175;
					this.resetStatement();
					}
					break;
				case 27:
					{
					this.state = 176;
					this.returnStatement();
					}
					break;
				case 28:
					{
					this.state = 177;
					this.whileStatement();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public annotation(): AnnotationContext {
		let localctx: AnnotationContext = new AnnotationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, qasm3Parser.RULE_annotation);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 182;
			this.match(qasm3Parser.AnnotationKeyword);
			this.state = 184;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===105) {
				{
				this.state = 183;
				this.match(qasm3Parser.RemainingLineContent);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public scope(): ScopeContext {
		let localctx: ScopeContext = new ScopeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, qasm3Parser.RULE_scope);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 186;
			this.match(qasm3Parser.LBRACE);
			this.state = 190;
